# unitymdm-prod

./: .gitignore  .replit  ACK_DEBUG_SUMMARY.md  ALERTS_GUIDE.md  ANDROID_CI_SETUP.md  ANDROID_CLIENT_CACHING.md  APK_DOWNLOAD_OPTIMIZATION_SUMMARY.md  APK_MANAGEMENT_STABILIZATION_REPORT.md  APP_STORAGE_SETUP.md  BATCH_ENROLLMENT_BUG_BASH.md  BLOATWARE_MANAGEMENT_SUMMARY.md  BUG_BASH_APK_MANAGEMENT_REPORT.md  BUG_BASH_COMPREHENSIVE_REPORT.md  BUG_BASH_FINAL_REPORT.md  BUG_BASH_MONITORING_REPORT.md  BUG_BASH_REPORT.md  BUG_FIX_SERVICE_MONITORING_NOT_INSTALLED.md  BUG_REPORT.md  CLEANUP_INSTRUCTIONS.md  CLOUD_RUN_AUTOSCALING.md  DEPLOYMENT_READY.md  GITHUB_ACTIONS_FIX.md  GITHUB_WORKFLOW_SETUP.md  LICENSE  MILESTONE_4_CHECKLIST.md  MILESTONE_4_COMPLETE.md  MILESTONE_4_OTA_SUMMARY.md  MONITORING_IMPLEMENTATION_STATUS.md  NexMDM_Bug_Report.md  PHASE_1_FIXES_SUMMARY.md  PHASE_2_FIXES_SUMMARY.md  PHASE_3_FIXES_SUMMARY.md  PRODUCTION_SETUP.md  README.md  REMOTE_EXECUTION_BUG_REPORT.md  SCALING_IMPLEMENTATION.md  USAGE_STATS_PERMISSION_GUIDE.md  WIFI_ANDROID_IMPLEMENTATION.md  batch_enroll.cmd  bug_bash_report.json  (+20 more)
.github/: README.md  SECRETS_SETUP.md
UNITYmdm/: .env.example  .gitignore  .replit  ANDROID_BATTERY_OPTIMIZATION_GUIDE.md  DEPLOYMENT.md  LICENSE  README.md  package-lock.json  package.json  replit.md
android/: .knownPackages  BUILD_INSTRUCTIONS.md  QR_SCANNER_IMPLEMENTATION.md  build.gradle
attached_assets/: Pasted--21-Authorization-authHeader-cause-Error-HeadersTimeoutError-Headers-Time-1764691865588_1764691865588.txt  (+116 more)
db_migration/: MIGRATION_GUIDE.md  (+2 more)
(+426 files in other folders)
